--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,8 +23,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
+  margin: 20px;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -45,6 +44,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-right: 20px;
 }
 button:hover {
   border-color: #646cff;
